src/test/ui/traits/issue-82830.stderr
error[E0275]: overflow evaluating the requirement `P: Sized`
  --> $DIR/issue-82830.rs:7:8
   |
LL |     t: MaybeBox<P>,
   |        ^^^^^^^^^^^
   |
note: required by a bound in `A`
  --> $DIR/issue-82830.rs:1:9
   |
LL | trait A<Y, N> {
   |         ^ required by this bound in `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
